--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,10 @@
             <version>3.1.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
