--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/students
+spring.datasource.url = jdbc:postgresql://localhost:7777/Car
 spring.datasource.username = postgres
-spring.datasource.password = 12345678
+spring.datasource.password = drakon0409
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
@@ -14,8 +14,16 @@ spring.jpa.hibernate.ddl-auto = create
 logging.level.org = WARN
 logging.level.blog = WARN
 
-server.port=8888
+server.port=8080
 
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+spring.thymeleaf.mode=DEBUG
